# core-ti

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
core_ta/: engine.py  registry.py
core_ta/backends/: __init__.py  base.py  talib_backend.py
core_ta/indicators/: __init__.py  ma_angle.py  oscillators.py  trend.py  volatility.py
core_ti/: __init__.py  _config.py  _rolling.py  dag.py  engine.py  registry.py  schema.py
core_ti/backends/: __init__.py  pandas_backend.py  pandas_ta_backend.py  tulipy_backend.py
core_ti/indicators/: __init__.py  ma_cross.py  moving_averages.py  oscillators.py  scalars.py  volatility.py
tests/: conftest.py  test_backend_config.py  test_integration.py  test_ma_angle.py  test_ma_cross.py  test_rolling_indicators.py
tests/bench/: conftest.py  report.py  test_bench_atr.py  test_bench_bb.py  test_bench_ema.py  test_bench_ma_angle.py  test_bench_macd.py  test_bench_rsi.py  test_bench_sma.py  test_bench_wma.py
