[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-ta"
version = "0.1.0"
description = "Stock technical indicator calculation library with pluggable backends"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
talib = ["TA-Lib>=0.4"]
pandas-ta = ["pandas-ta>=0.3"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_ta*"]
