[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-ti"
version = "0.1.0"
description = "Stock technical indicator calculation library with pluggable backends"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "ta-lib>=0.6.8",
]

[project.optional-dependencies]
pandas-ta = ["pandas-ta>=0.3"]
tulipy = ["tulipy>=0.4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_ti*"]
